--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "sass --no-source-map src/main.scss static/css/main.css --style compressed",
-    "watch": "sass --no-source-map --watch src/main.scss static/css/main.css"
+    "watch": "sass --no-source-map --watch src/main.scss static/css/main.css",
+    "start": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,10 @@
   },
   "homepage": "https://github.com/mkor92/Uppgift2-Biograf#readme",
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "sass": "^1.57.1"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
