--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass": "^1.57.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6"
   }
 }
