--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "sass --no-source-map src/main.scss static/css/main.css --style compressed",
     "watch": "sass --no-source-map --watch src/main.scss static/css/main.css",
-    "start": "nodemon ."
+    "start": "nodemon .",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,11 @@
   },
   "homepage": "https://github.com/mkor92/Uppgift2-Biograf#readme",
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.4.0",
     "nodemon": "^2.0.20",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "express": "^4.18.2",
